<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:orientation="horizontal" >
        
        <Button 
           android:id="@+id/bt_once"
           android:layout_width="0dp"
	       android:layout_height="wrap_content"
	       android:layout_weight="1"
	       android:text="@string/once"
	        />
        <Button 
           android:id="@+id/bt_continue" 
           android:layout_width="0dp"
	       android:layout_height="wrap_content"
	       android:layout_weight="1"
	       android:text="@string/continues"
	        />
        <Button 
           android:id="@+id/bt_stop"
           android:layout_width="0dp"
	       android:layout_height="wrap_content"
	       android:layout_weight="1"
	       android:enabled="false"
	       android:text="@string/stop"
	        />
        
    </LinearLayout>
    
     <View 
            android:layout_width="fill_parent"
	        android:layout_height="1dip"
	        android:background="#66000000"       
            />
    
     <LinearLayout 
          android:layout_width="fill_parent"
	    android:layout_height="20dp"
	    android:orientation="horizontal">
         
         <TextView 
             android:id="@+id/tv_total"
             android:layout_width="0dp"
	    	android:layout_height="fill_parent"
	    	android:layout_weight="6"
	    	android:text="@string/id_pc_epc"
	    		
	    />
         
         <View 
             android:layout_width="1dp"
	    	android:layout_height="fill_parent"
	    	android:background="#6000"/>
         
         <TextView 
             android:layout_width="0dp"
	    	android:layout_height="fill_parent"
	    	android:layout_weight="1.2"
	    	android:text="@string/nums"
	    	android:gravity="center"
	    />
           <View 
             android:layout_width="1dp"
	    	android:layout_height="fill_parent"
	    	android:background="#6000"/>
           
         <TextView 
             android:layout_width="0dp"
	    	android:layout_height="fill_parent"
	    	android:layout_weight="0.8"
	    	android:text="@string/rssi"
	    	android:gravity="center"
	    />
         
     </LinearLayout>
    
      <View 
            android:layout_width="fill_parent"
	        android:layout_height="1dip"
	        android:background="#66000000"       
            />
      
    
          <ListView
           android:id="@+id/lv_id" 
           android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:layout_weight="10"
	       >
           
    	</ListView>
      
      <View 
            android:layout_width="fill_parent"
	        android:layout_height="1dip"
	        android:background="#66000000"
            />
       
     <LinearLayout 
        android:layout_width="fill_parent"
	    android:layout_height="30dp"
	    android:orientation="horizontal">
        
        <TextView 
        android:layout_width="0dp"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:text="@string/bank"
	    android:gravity="center"
	    />
        <TextView 
        android:layout_width="0dp"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:text="@string/address"
	    android:gravity="center"
	    />
        <TextView 
        android:layout_width="0dp"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:text="@string/lenth"
	    android:gravity="center"
	    />
        <TextView 
        android:layout_width="0dp"
	    android:layout_height="fill_parent"
	    android:layout_weight="2"
	    android:text="@string/password"
	    android:gravity="center"
	    />
        
    </LinearLayout>
    
      <LinearLayout 
        android:layout_width="fill_parent"
	    android:layout_height="30dp"
	    android:orientation="horizontal"  >
        
        <EditText
        android:id="@+id/et_bank" 
        android:layout_width="0dp"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:gravity="center"
	    android:background="@drawable/et"
	    />
        <EditText 
            android:id="@+id/et_address"
        android:layout_width="0dp"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:gravity="center"
	    android:background="@drawable/et"
	    />
        <EditText
            android:id="@+id/et_lenth" 
        android:layout_width="0dp"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:gravity="center"
	    android:background="@drawable/et"
	    />
        <EditText 
            android:id="@+id/et_password"
        android:layout_width="0dp"
	    android:layout_height="fill_parent"
	    android:layout_weight="2"
	    android:gravity="center"
	    android:background="@drawable/et"
	    />
        
    </LinearLayout>

     <LinearLayout 
        android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:orientation="horizontal" >
        
        <Button 
           android:id="@+id/bt_read"
           android:layout_width="0dp"
	       android:layout_height="wrap_content"
	       android:layout_weight="1"
	       android:text="@string/read"
	        />
        <Button
            android:id="@+id/bt_write" 
           android:layout_width="0dp"
	       android:layout_height="wrap_content"
	       android:layout_weight="1"
	       android:text="@string/write"
	        />
        <Button 
            android:id="@+id/bt_clear"
           android:layout_width="0dp"
	       android:layout_height="wrap_content"
	       android:layout_weight="1"
	       android:text="@string/clear"
	        />
         
    </LinearLayout>

   <EditText
         android:id="@+id/et_data"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"         
         android:lines="3" 
         android:background="@drawable/et"
         >       
     </EditText>
     
</LinearLayout>
